# pepper_perception_configs

./: .gitignore  CMakeLists.txt  README.md
tracker/: bayes_people_tracker.yaml
vision/clf_perception/: clf_perception_cmt_example.yaml  clf_perception_gender_age_example.yaml.in  clf_perception_surb_example.yaml.in
vision/darknet_ros/: ros.yaml  tiny.yaml  tiny_yolo_voc.yaml  tiny_yolo_voc_batchsize.yaml
vision/openpose_ros/: shirtcolor.yaml
